# ansible-collections

./: README.md  pyproject.toml
.config/: ansible-lint.yaml  pre-commit.yaml
.devcontainer/: devcontainer.json
.docker/: env.Dockerfile
jkrenzer/linux/: README.md  galaxy.yml
jkrenzer/linux/playbooks/: upgrade.yml
jkrenzer/server_linux_docker_compose/: README.md  galaxy.yml  requirements.yml
jkrenzer/server_linux_docker_compose/playbooks/: change_image.yml  install_requirements.yml  upgrade_containers.yml
jkrenzer/server_linux_kubernetes/: README.md  galaxy.yml
jkrenzer/server_linux_kubernetes/playbooks/: create_cluster.yaml  install_certmanager.yaml  install_helm.yaml  install_ingress_nginx.yaml  install_reloader.yaml
jkrenzer/server_linux_kubernetes/playbooks/tasks/: kubernetes_debug_info.yaml
jkrenzer/server_linux_kubernetes/roles/certmanager/meta/: argument_specs.yaml  main.yaml
jkrenzer/server_linux_kubernetes/roles/certmanager/tasks/: install.yaml  main.yaml  remove.yaml
jkrenzer/server_linux_kubernetes/roles/helm/meta/: argument_specs.yaml  main.yaml
jkrenzer/server_linux_kubernetes/roles/helm/tasks/: main.yaml  remove.yaml
jkrenzer/server_linux_kubernetes/roles/ingress_nginx/meta/: argument_specs.yaml  main.yaml
jkrenzer/server_linux_kubernetes/roles/ingress_nginx/tasks/: install.yaml  install_traefik.yaml  main.yaml  remove.yaml  remove_traefik.yaml
jkrenzer/server_linux_kubernetes/roles/mailserver/meta/: argument_specs.yaml  main.yaml
jkrenzer/server_linux_kubernetes/roles/mailserver/tasks/: install.yaml
(+13 files in other folders)
