[tool.poetry]
name         = "ansible-collections"
version      = "0.1.0"
description  = "Some useful ansible collections"
authors      = ["Jörn Krenzer"]
license      = "MIT"
readme       = "README.md"
package-mode = false

[tool.poetry.dependencies]
python        = "^3.12"
ansible       = "^10.6.0"
poethepoet    = "^0.30.0"
pydantic      = "^2.9.2"
Jinja2        = "^3.1.0"
"ruamel.yaml" = "^0.18.6"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.10.0", markers = "platform_system != 'Windows'" }
pre-commit = "^4.0.1"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
